# ai-as-tool

./: .gitignore  README.md  pyproject.toml
notebooks/: Models.ipynb  data_preparation.ipynb  react_agent.ipynb
