[project]
name = "ai-as-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab",
    "ipykernel",
    "ipywidgets",
    "pandas>=2.3.1",
    "numpy>=2.3.2",
    "scikit-learn>=1.7.1",
    "matplotlib>=3.10.5",
    "seaborn>=0.13.2",
    "lightgbm>=4.6.0",
    "langgraph>=0.6.5",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.30",
    "pydantic>=2.11.7",
    "joblib>=1.5.1",
    "langchain-ollama>=0.3.6",
]
